--- a/html/Globe.html
+++ b/html/Globe.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     
+    <section> 
+         
+        <div class="stars"></div> 
+        <div class ="shimmer"></div>  
+
+    </section> 
+
 </body>
 </html>
