Change 2 added Earth Category

--- a/html/Globe.html
+++ b/html/Globe.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="/css/Globe.css">
 </head>
 <body>
-    <div class="site">
-        <div class="sky"></div>
-        <div class="earth"></div>
-        <div class="santa"></div>
+    <div class="earth">
+        Test
     </div>
     
     <section> 
