--- a/html/Globe.html
+++ b/html/Globe.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/css/Globe.css">
 </head>
 <body>
-    <div class="earth">
-        Test
+
+    <div id="earth">
+        <h1>Test</h1>
     </div>
     
     <section> 
