--- a/html/Globe.html
+++ b/html/Globe.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="/css/Globe.css">
 </head>
 <body>
+    <section id="earth-section">
 
-    <div id="earth">
-        <h1>Test</h1>
-    </div>
-    
+        <div id="earth-div"> </div>
+
+    </section>
+
     <section> 
         <div class="stars"></div> 
         <div class ="shimmer"></div>  
