--- a/html/Startside.html
+++ b/html/Startside.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
 <body>
+    <div class="sky"></div>
+    <div class="fores">
+        <three></three>
+        <three></three>
+        <three></three>
+    </div>
+    <div class="ground"> <img src="" alt=""></div>
+
+
     
 </body>
 </html>
