--- a/html/Startside.html
+++ b/html/Startside.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
 <body>
-    <div class="sky"></div>
-    <div class="fores">
-        <three></three>
-        <three></three>
-        <three></three>
-    </div>
-    <div class="ground"> <img src="" alt=""></div>
+    <img src="/images/snow (2).png" alt="">
+    <div class="noe"></div>
 
 
     
