--- a/html/Globe.html
+++ b/html/Globe.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="/css/Globe.css">
 </head>
 <body>
-    <section id="earth-section">
 
-        <div id="earth-div"> </div>
-
-    </section>
+        <div id="earth-div">
+             
+        </div>
 
     <section> 
         <div class="stars"></div> 
