--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/LEGO-City.css">
 </head>
 <body>
-    
+    <input type="checkbox" id="toggle">
+    <label for="toggle">Click me!</label>
+    <p class="to-be-changed">I'm going to be red! It's gonna be legen... Wait for it...</p>
 </body>
 </html>
