--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="/css/LEGO-City.css">
 </head>
 <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle">Click me!</label>
-    <p class="to-be-changed">I'm going to be red! It's gonna be legen... Wait for it...</p>
+    <a href="#id">Click me!</a>
+    <p id="id" class="to-be-changed">I'm going to be red! It's gonna be legen... Wait for it...</p>
 </body>
 </html>
