--- a/html/Startside.html
+++ b/html/Startside.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
 <body>
-    <img src="/images/snow (2).png" alt="">
-    <div class="noe"></div>
 
-
+    <img src="/IMAGES/startside/ground.png" alt="">
     
 </body>
 </html>
