Felles CSS mappe

--- a/html/Globe.html
+++ b/html/Globe.html
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> LEGO: Santa </title>
     <link rel="stylesheet" href="/css/Globe.css">
+    <link rel="stylesheet" href="/CSS/Felles.css">
 </head>
 <body>
 
-        <div id="earth-div">
-            
-            
-        </div>
+        <div id="earth-div"> </div>
 
     <section> 
         <div class="stars"></div> 
         <div class ="shimmer"></div>  
     </section> 
+
+    <section>
+
+        <div id="santa-sleigh"> </div>
+
+    </section>
 
 </body>
 </html>
