--- a/html/Startside.html
+++ b/html/Startside.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,12 @@
     <title> Velkommen til skogen! </title>
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
-<body>
 
-    <img src="/IMAGES/startside/ground.png" alt="">
-    
+<body>
+    <div class="frame">
+        <img src="/IMAGES/startside/ground.png" alt="forest floor" class="ground">
+        <img src="/IMAGES/startside/groundLego.png" alt="ground of snow in lego" class="ground">
+    </div>
 </body>
+
 </html>
