--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oslo</title>
-    <link rel="stylesheet" href="/css/legoLand.css"/>
+    <link rel="stylesheet" href="/css/Lego-Land.css"/>
 </head>
 <body>
-    <div class="skyContainer">
-        <img class="sky" src="/images/legoLand/blueLegoBoard.png"/>
-        <img class="sky" src="/images/legoLand/blueLegoBoard.png"/>
-    </div>
+    <div class="container">
+        <div class="skyContainer">
+            <img class="sky" src="/images/legoLand/blueLegoBoard.png"/>
+            <img class="sky" src="/images/legoLand/blueLegoBoard.png"/>
+        </div>
 
-    <div class="castleContainer">
-        <img class="castle" src="/images/legoLand/beigeLegoBoard.png" alt="beigeLegoBoard"/>
-        <img class="castle" src="/images/legoLand/beigeLegoBoard.png" alt="beigeLegoBoard"/>
-        <img class="castle triangle" src="/images/legoLand/beigeLegoTriangle2.png" alt="beigeLegoTrinangle"/>
-    </div>
-        
+        <div class="castleContainer">
+            <img class="castle" src="/images/legoLand/beigeLegoBoard.png" alt="beigeLegoBoard"/>
+            <img class="castle" src="/images/legoLand/beigeLegoBoard.png" alt="beigeLegoBoard"/>
+            <img class="castle triangle" src="/images/legoLand/beigeLegoTriangle2.png" alt="beigeLegoTrinangle"/>
+        </div>
+    </div>   
 </body>
 </html>
