--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LEGO-City</title>
     <link rel="stylesheet" href="/css/LEGO-City.css">
+    <link rel="stylesheet" href="/CSS/Felles.css">
 </head>
 <body>
-    <a href="#id">Click me!</a>
-    <p id="id" class="to-be-changed">I'm going to be red! It's gonna be legen... Wait for it...</p>
+
 </body>
 </html>
