--- a/html/Startside.html
+++ b/html/Startside.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Velkommen til skogen! </title>
+    <link rel="stylesheet" href="/CSS/Felles.css">
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
 
 <body>
     <div class="frame">
-        <img src="/IMAGES/startside/ground.png" alt="forest floor" class="ground">
         <img src="/IMAGES/startside/groundLego.png" alt="ground of snow in lego" class="ground">
     </div>
 </body>
