--- a/html/Startside.html
+++ b/html/Startside.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="frame">
-        <img src="/IMAGES/startside/groundLego.png" alt="ground of snow in lego" class="ground">
+        <img src="/IMAGES/startside/lego-road.png" alt="Road of lego" class="road">
+        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
     </div>
 </body>
 
