--- a/html/Startside.html
+++ b/html/Startside.html
@@ -12,8 +12,11 @@
 
 <body>
     <div class="frame">
-        <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
-        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+        <div class="frame legoframe">
+            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
+            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+            <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+        </div>
     </div>
 </body>
 
