--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/CSS/Felles.css">
 </head>
 <body>
-
+    <div id="container">
+        <div id="bakgrunn"></div>
+    </div>
 </body>
 </html>
