--- a/html/Globe.html
+++ b/html/Globe.html
@@ -19,7 +19,10 @@
 
     <section>
 
-        <div id="santa-sleigh"> </div>
+        <div id="santa-sleigh">
+            <div id="sleigh-bottom"> </div>    
+            <div id="sleigh-rim"> </div>    
+        </div>
 
     </section>
 
