--- a/html/Startside.html
+++ b/html/Startside.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+
+    <section> 
+        <div class="stars"></div> 
+        <div class ="shimmer"></div>  
+    </section> 
+
     <div class="frame">
         <img src="/IMAGES/startside/lego-road.png" alt="Road of lego" class="road">
         <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
