--- a/html/Startside.html
+++ b/html/Startside.html
@@ -16,7 +16,8 @@
     <div class="frame">
         <section> 
             <div class="stars"></div> 
-            <div class ="shimmer"></div>  
+            <div class ="shimmer"></div> 
+            <div class="moon"><img src="/IMAGES/startside/moon.png" alt=""></div> 
         </section> 
         <div class="frame legoframe">
             <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
