--- a/html/Globe.html
+++ b/html/Globe.html
@@ -20,8 +20,10 @@
     <section>
 
         <div id="santa-sleigh">
-            <div id="sleigh-bottom"> </div>    
             <div id="sleigh-rim"> </div>    
+            <div id="sleigh-shadow"> </div>
+            
+            <div id="santa-leg-right"> </div>
         </div>
 
     </section>
