--- a/html/Startside.html
+++ b/html/Startside.html
@@ -20,9 +20,18 @@
             <div class="moon"><img src="/IMAGES/startside/moon.png" alt=""></div> 
         </section> 
         <div class="frame legoframe">
+            <!--Image center-->
             <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
             <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
             <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+
+            <!--Forest-->
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree">
         </div>
     </div>
 </body>
