--- a/html/Startside.html
+++ b/html/Startside.html
@@ -26,12 +26,14 @@
             <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
 
             <!--Forest-->
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree">
+            <div class="treetree">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig" id="tree1">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal" id="tree1">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig" id="tree1">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal" id="tree1">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig" id="tree1">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig" id="tree1">
+        </div>
         </div>
     </div>
 </body>
