moon moved to wallpaper

--- a/html/Startside.html
+++ b/html/Startside.html
@@ -17,7 +17,7 @@
         <section> 
             <div class="stars"></div> 
             <div class ="shimmer"></div> 
-            <div class="moon"><img src="/IMAGES/startside/moon.png" alt=""></div> 
+            <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div> 
         </section> 
         <div class="frame legoframe">
             <!--Image center-->
