--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>North Pole</title>
     <link rel="stylesheet" href="/css/North-Pole.css" type="text/css">
+    <link rel="stylesheet" href="/css/Felles.css" type="text/css">
 </head>
 <body>
     <div id = "container">
