background moved to felles

--- a/html/Globe.html
+++ b/html/Globe.html
@@ -14,7 +14,8 @@
 
     <section> 
         <div class="stars"></div> 
-        <div class ="shimmer"></div>  
+        <div class ="shimmer"></div>
+        <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
     </section> 
 
     <section>
