--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="/CSS/Felles.css">
 </head>
 <body>
-    <div id="container">
-        <div id="bakgrunn"></div>
-    </div>
+    <section id="container"> 
+        <div class="stars"></div> 
+        <div class ="shimmer"></div>
+        <img id="bilde" src="/images/LEGO-City/imageedit_9_2933579043.png" alt=""">
+    </section> 
+
 </body>
 </html>
