Lagt til himmel, snø og litt av slott

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -5,20 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oslo</title>
+    <link rel="stylesheet" href="/CSS/Felles.css">
     <link rel="stylesheet" href="/css/Lego-Land.css"/>
 </head>
 <body>
     <div class="container">
+        <div class="snowContainer">
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+        </div>
         <div class="skyContainer">
-            <img class="sky" src="/images/legoLand/blueLegoBoard.png"/>
-            <img class="sky" src="/images/legoLand/blueLegoBoard.png"/>
+            <img class="sky" src="/images/Lego-Land/blueLegoBoard.png"/>
+        </div>
+
+        <div class="windowContainer">
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
 
         <div class="castleContainer">
-            <img class="castle" src="/images/legoLand/beigeLegoBoard.png" alt="beigeLegoBoard"/>
-            <img class="castle" src="/images/legoLand/beigeLegoBoard.png" alt="beigeLegoBoard"/>
-            <img class="castle triangle" src="/images/legoLand/beigeLegoTriangle2.png" alt="beigeLegoTrinangle"/>
+            <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
+            <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
         </div>
+
+        <div class="pillarContainer">
+            <img class="pillar" src="/images/Lego-Land/white-lego-pillar.png" alt="legoPillar"/>
+        </div>
+        
     </div>   
 </body>
 </html>
