--- a/html/Globe.html
+++ b/html/Globe.html
@@ -24,7 +24,7 @@
             <div id="sleigh-rim"> </div>    
             <div id="sleigh-shadow"> </div>
             
-            <div id="santa-legs"> </div>
+            <div id="santa-legs"> <img src="/IMAGES/Globe/lego-legs.png"> </div>
         </div>
 
     </section>
