--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -11,7 +11,7 @@
 <body>
     <div id = "container">
         <img id="snowBackground" src="/images/North-Pole/snowLandscape.png" alt = "snow landscape">
-        
+        <img id="sleigh" src ="/images/North-Pole/sleigh" alt="sleigh">
         <div id = "assemblyLineContainer">
             <img id="assemblyLine" src="/images/North-Pole/assemblyLine.png" alt ="assembly line">
             <div id="conveyorBelt">
