--- a/html/Startside.html
+++ b/html/Startside.html
@@ -24,7 +24,7 @@
             <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
             <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
             <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
-            <img src="/IMAGES/North-Pole/present1.png" alt="">
+            <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
 
             <!--Forest-->
             <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig" id="tree1">
