--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -12,7 +12,7 @@
     <section id="container"> 
         <div class="stars"></div> 
         <div class ="shimmer"></div>
-        <img id="bilde" src="/images/LEGO-City/imageedit_9_2933579043.png" alt=""">
+        <img id="bilde" src="/images/LEGO-City/imageedit_9_2933579043.png" alt="">
         <img id="bilde2" src="/images/LEGO-City/imageedit_16_8997529202.gif" alt="">
     </section> 
 
