--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="/css/Felles.css" type="text/css">
 </head>
 <body>
+
+    <section> 
+        <div class="stars"></div> 
+        <div class ="shimmer"></div>
+        <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
+    </section> 
+
     <div id = "container">
         <img id="snowBackground" src="/images/North-Pole/snowLandscape.png" alt = "snow landscape">
         <img id="sleigh" src ="/images/North-Pole/sleigh.png" alt="sleigh">
