--- a/html/Globe.html
+++ b/html/Globe.html
@@ -15,7 +15,7 @@
     <section> 
         <div class="stars"></div> 
         <div class ="shimmer"></div>
-        <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
+        <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt="The Moon"/></div>   
     </section> 
 
     <section>
@@ -23,8 +23,8 @@
         <div id="santa-sleigh">
             <div id="sleigh-rim"> </div>    
             <div id="sleigh-shadow"> </div>
-            <div id="santa-legs"> <img src="/IMAGES/Globe/lego-legs.png"> </div>
-            <div id="santa-arms"> </div>
+            <div id="santa-legs"> <img src="/IMAGES/Globe/lego-legs.png" alt="Santas Legs"/> </div>
+            <div id="santa-arms"> <img src="/IMAGES/Globe/Santa-arms.png" alt="Santas Arms"/></div>
         </div>
         
     </section>
