Lagt til skyer og trær

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -51,14 +51,23 @@
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
-
         <div class="castleContainer">
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
         </div>
 
-        <div class="pillarContainer">
-            <img class="pillar" src="/images/Lego-Land/white-lego-pillar.png" alt="legoPillar"/>
+        <div class="treeContainer">
+            <img class="tree" id="tree1" src="/images/startside/tree1.png" alt="tree1"/>
+            <img class="tree" id="tree2" src="/images/startside/tree1.png" alt="tree1"/>
+            <img class="tree" id="tree3" src="/images/startside/tree1.png" alt="tree1"/>
+            <img class="tree" id="tree4" src="/images/startside/tree2.png" alt="tree1"/>
+        </div>
+
+        <div class="cloudContainer">
+            <img class="cloud" id="cloud1" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
+            <img class="cloud" id="cloud2" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
+            <img class="cloud" id="cloud3" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
+            <img class="cloud" id="cloud4" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
         </div>
         
     </div>   
