--- a/html/Globe.html
+++ b/html/Globe.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> LEGO: Santa </title>
-    <link rel="stylesheet" href="/css/Globe.css">
-    <link rel="stylesheet" href="/CSS/Felles.css">
+    <link rel="stylesheet" href="/css/Globe.css" type="text/css"/>
+    <link rel="stylesheet" href="/CSS/Felles.css" type="text/css"/>
 </head>
 <body>
 
