--- a/html/Startside.html
+++ b/html/Startside.html
@@ -14,13 +14,13 @@
 
 
     <div class="frame">
-        <section> 
-            <div class="stars"></div> 
-            <div class ="shimmer"></div> 
-            <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div> 
-        </section> 
-        
-        <div class="frame legoframe">
+        <section>
+            <div class="stars"></div>
+            <div class="shimmer"></div>
+            <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>
+        </section>
+
+        <div class="frame legoFrame">
             <!--Image center-->
             <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
             <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
@@ -28,14 +28,25 @@
             <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
 
             <!--Forest-->
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig" id="tree1">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal" id="tree2">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig" id="tree3">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal" id="tree4">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig" id="tree5">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig" id="tree6">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig tree1">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree2">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree3">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree4">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree5">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree6">
+        </div>
+
+
+    </div>
+    <div class="normalFrame">
+        <div>
+            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
+            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
+            <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
         </div>
     </div>
+
 </body>
 
 </html>
