Lagt til dør og vinduer i første etg

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -17,6 +17,7 @@
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
         </div>
+
         <div class="skyContainer">
             <img class="sky" src="/images/Lego-Land/blueLegoBoard.png"/>
         </div>
@@ -46,16 +47,37 @@
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+        </div>
+
+        <div class="windowContainerBottom">
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
+
+        <div class="castleTriangleContainer">
+            <img class="castleTriangle" src="/images/Lego-Land/beigeLegoTriangle2.png" alt="triangle"/>
+        </div>
+
         <div class="castleContainer">
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
         </div>
 
+        <div class="doorContainer">
+            <img class="door" src="/images/Lego-Land/door3.png"/>
+            <img class="door" id="door2" src="/images/Lego-Land/door3.png"/>
+        </div>
+        
         <div class="treeContainer">
             <img class="tree" id="tree1" src="/images/startside/tree1.png" alt="tree1"/>
             <img class="tree" id="tree2" src="/images/startside/tree1.png" alt="tree1"/>
