--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -41,6 +41,7 @@
 
         </div>    
         <img id="house2" src="/images/North-Pole/nphouse2.png" alt="house">
+        <img id="giftbag" src="/images/North-Pole/giftBag.png" alt="giftbag">
     </div>
 </body>
 </html>
