--- a/html/Startside.html
+++ b/html/Startside.html
@@ -40,10 +40,17 @@
     </div>
     <div class="normalFrame">
         <div>
-            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
-            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigThree">
+            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
             <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
             <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
+
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig tree1">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree2">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree3">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree4">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree5">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree6">
         </div>
     </div>
 
