--- a/html/Globe.html
+++ b/html/Globe.html
@@ -28,5 +28,11 @@
         </div>
         
     </section>
+
+    <section>
+
+        <div id="reindeer"></div>
+
+    </section>
 </body>
 </html>
