--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -42,6 +42,10 @@
         </div>    
         <img id="house2" src="/images/North-Pole/nphouse2.png" alt="house">
         <img id="giftbag" src="/images/North-Pole/giftBag.png" alt="giftbag">
+        <img id="helper1" src="/images/North-Pole/helper1.png" alt="santa helper">
+        <img id="helper2" src="/images/North-Pole/helper2.png" alt="santa helper">
+        <img id="helper3" src="/images/North-Pole/helper3.png" alt="santa helper">
+        <img id="cottage" src="/images/North-Pole/TheCottage.png" alt="cottage">
     </div>
 </body>
 </html>
