Endra til View Height og lagt til sky animasjon e Lego-Land

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- Stairs -->
+        <div class="stairsContainer">
+            <img class="stairs" src="/images/Lego-Land/gray-lego-board.png" alt="stairs"/>
+        </div>
+
+        <!-- Snow -->
         <div class="snowContainer">
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
@@ -18,10 +25,12 @@
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
         </div>
 
+        <!-- Sky -->
         <div class="skyContainer">
             <img class="sky" src="/images/Lego-Land/blueLegoBoard.png"/>
         </div>
 
+        <!-- Top windows -->
         <div class="windowContainer">
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
@@ -45,10 +54,9 @@
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
 
+         <!-- Bottom windows -->
         <div class="windowContainerBottom">
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
@@ -64,20 +72,24 @@
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
 
+        <!-- Castle triangle -->
         <div class="castleTriangleContainer">
             <img class="castleTriangle" src="/images/Lego-Land/beigeLegoTriangle2.png" alt="triangle"/>
         </div>
 
+        <!-- Castle  -->
         <div class="castleContainer">
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
         </div>
 
+        <!-- Castle door -->
         <div class="doorContainer">
             <img class="door" src="/images/Lego-Land/door3.png"/>
             <img class="door" id="door2" src="/images/Lego-Land/door3.png"/>
         </div>
         
+        <!-- Trees -->
         <div class="treeContainer">
             <img class="tree" id="tree1" src="/images/startside/tree1.png" alt="tree1"/>
             <img class="tree" id="tree2" src="/images/startside/tree1.png" alt="tree1"/>
@@ -85,11 +97,12 @@
             <img class="tree" id="tree4" src="/images/startside/tree2.png" alt="tree1"/>
         </div>
 
+        <!-- Clouds -->
         <div class="cloudContainer">
-            <img class="cloud" id="cloud1" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
-            <img class="cloud" id="cloud2" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
-            <img class="cloud" id="cloud3" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
-            <img class="cloud" id="cloud4" src="/images/Lego-Land/lego-cloud.png" alt="cloud"/>
+            <img class="cloud" id="cloud1" src="/images/Lego-Land/cloud2.png" alt="cloud"/>
+            <img class="cloud" id="cloud2" src="/images/Lego-Land/cloud2.png" alt="cloud"/>
+            <img class="cloud" id="cloud3" src="/images/Lego-Land/cloud2.png" alt="cloud"/>
+            <img class="cloud" id="cloud4" src="/images/Lego-Land/cloud2.png" alt="cloud"/>
         </div>
         
     </div>   
