--- a/html/Startside.html
+++ b/html/Startside.html
@@ -11,48 +11,57 @@
 </head>
 
 <body>
+    <!--Sky-->
+<section>
+    <div class="stars"></div>
+    <div class="shimmer"></div>
+    <div class="moon" id="legoMoon"></div>
+</section>
 
+<div class="normalFrame">
+    <!--Sky-->
+    <section>
+        <div class="moon"  id="relMoon"></div>
+    </section>
+    <!--Image center-->
+    <section>
+        <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigThree">
+        <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
+        <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
+        <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
+    </section>
+    <!--Forest-->
+    <section>
+        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeBig tree1">
+        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree2">
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree3">
+        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree4">
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree5">
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree6">
+    </section>
+</div>
 
-    <div class="frame">
-        <section>
-            <div class="stars"></div>
-            <div class="shimmer"></div>
-            <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>
-        </section>
+<div class="legoFrame">
+    <!--Sky-->
+    <section></section>
+    <!--Image center-->
+    <section>
+        <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
+        <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+        <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
+    </section>
+    <!--Forest-->
+    <section>
+        <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig tree1">
+        <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree2">
+        <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree3">
+        <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree4">
+        <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree5">
+        <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree6">
+    </section>
+</div>
 
-        <div class="frame legoFrame">
-            <!--Image center-->
-            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
-            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
-            <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
-            <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-
-            <!--Forest-->
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig tree1">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree2">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree3">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree4">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree5">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree6">
-        </div>
-
-
-    </div>
-    <div class="normalFrame">
-        <div>
-            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigThree">
-            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
-            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
-            <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeBig tree1">
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree2">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree3">
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree4">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree5">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree6">
-        </div>
-    </div>
 
 </body>
 
