--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -46,6 +46,15 @@
         <img id="helper2" src="/images/North-Pole/helper2.png" alt="santa helper">
         <img id="helper3" src="/images/North-Pole/helper3.png" alt="santa helper">
         <img id="cottage" src="/images/North-Pole/TheCottage.png" alt="cottage">
+        <img class= "cloud" id="cloud1" src="/images/Lego-Land/cloud1.png" alt="cloud">
+        <!--<img class= "cloud" id="cloud2" src="/images/Lego-Land/cloud1.png" alt="cloud">
+        <img class= "cloud" id="cloud3" src="/images/Lego-Land/cloud1.png" alt="cloud">
+        <img class= "cloud" id="cloud4" src="/images/Lego-Land/cloud1.png" alt="cloud">-->
+        <img id="flake1"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
+        <img id="flake2"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
+        <img id="flake3"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
+        <img id="flake4"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
+        <img id="flake5"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
     </div>
 </body>
 </html>
