--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -14,9 +14,12 @@
             <div class="stars"></div> 
             <div class ="shimmer"></div>
         </section>
-        <img id="bilde" src="/images/LEGO-City/imageedit_9_2933579043.png" alt="">
-        <img id="bilde2" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
-        <img id="bilde3" src="/images/LEGO-City/imageedit_43_3027624519.png" alt="" srcset="">
+        
+        <section id="by">
+            <img id="bilde" src="/images/LEGO-City/imageedit_9_2933579043.png" alt="">
+            <img id="bilde2" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
+            <img id="bilde3" src="/images/LEGO-City/imageedit_43_3027624519.png" alt="">
+        </section>
     </section> 
 
 </body>
