--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -50,11 +50,11 @@
         <!--<img class= "cloud" id="cloud2" src="/images/Lego-Land/cloud1.png" alt="cloud">
         <img class= "cloud" id="cloud3" src="/images/Lego-Land/cloud1.png" alt="cloud">
         <img class= "cloud" id="cloud4" src="/images/Lego-Land/cloud1.png" alt="cloud">-->
-        <img id="flake1"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake2"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake3"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake4"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake5"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
+        <img id="flake1"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake2"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake3"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake4"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake5"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
     </div>
 </body>
 </html>
