--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -15,10 +15,12 @@
             <div class ="shimmer"></div>
         </section>
         
-        <section id="by">
-            <img id="bilde" src="/images/LEGO-City/imageedit_9_2933579043.png" alt="">
-            <img id="bilde2" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
-            <img id="bilde3" src="/images/LEGO-City/imageedit_43_3027624519.png" alt="">
+        <section id="city">
+            <img id="road" src="/images/LEGO-City/imageedit_9_2933579043.png" alt="">
+            <img id="house1" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
+            <img id="house2" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
+            <img id="house3" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
+            <img id="house4" src="/images/LEGO-City/imageedit_43_3027624519.png" alt="">
         </section>
     </section> 
 
