--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -12,11 +12,11 @@
 
 
     <div id = "container">
-        <section> 
+    <!--<section> 
             <div class="stars"></div> 
             <div class ="shimmer"></div>
             <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
-        </section> 
+        </section> -->
         
         <img id="snowBackground" src="/images/North-Pole/snowLandscape.png" alt = "snow landscape">
         <img id="sleigh" src ="/images/North-Pole/sleigh.png" alt="sleigh">
