--- a/html/Startside.html
+++ b/html/Startside.html
@@ -15,10 +15,9 @@
 <section>
     <div class="stars"></div>
     <div class="shimmer"></div>
-    <div class="moon" id="legoMoon"></div>
 </section>
 
-<div class="normalFrame">
+<div class="normalFrame frame">
 
     <!--Sky-->
     <section>
@@ -26,47 +25,49 @@
     </section>
 
     <!--Image center-->
-    <section>
-        <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigThree">
+    <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
+    <div>
+        <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigTree">
         <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
-        <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
         <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-    </section>
+    </div>
 
     <!--Forest-->
-    <section>
+    <div>
         <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeBig tree1">
         <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree2">
         <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree3">
         <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree4">
         <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree5">
         <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree6">
-    </section>
+    </div>
     
 </div>
 
-<div class="legoFrame">
+<div class="legoFrame frame">
 
     <!--Sky-->
-    <section></section>
+    <div>
+        <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon">
+    </div>
 
     <!--Image center-->
-    <section>
-        <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigThree">
-        <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+    <div>
         <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+        <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigTree">
+        <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
         <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-    </section>
+    </div>
 
     <!--Forest-->
-    <section>
+    <div>
         <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig tree1">
         <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree2">
         <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree3">
         <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree4">
         <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree5">
         <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree6">
-    </section>
+    </div>
 
 </div>
 
