--- a/html/Globe.html
+++ b/html/Globe.html
@@ -19,9 +19,9 @@
         
         <div id="santa-sleigh">
             <div id="sleigh-rim"> </div>    
+            <img id="santa-legs" src="/IMAGES/Globe/lego-legs.png" alt="Santas Legs"/> 
+            <img id="santa-arms" src="/IMAGES/Globe/Santa-arms.png" alt="Santas Arms"/>
             <div id="sleigh-shadow"> </div>
-            <div id="santa-legs"> <img src="/IMAGES/Globe/lego-legs.png" alt="Santas Legs"/> </div>
-            <div id="santa-arms"> <img src="/IMAGES/Globe/Santa-arms.png" alt="Santas Arms"/></div>
             <img id="reindeer" src="/IMAGES/Globe/reindeer-sleigh.png"/>
         </div>
         
