--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -20,7 +20,8 @@
             <img id="house1" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
             <img id="house2" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
             <img id="house3" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
-            <img id="house4" src="/images/LEGO-City/imageedit_43_3027624519.png" alt="">
+            <img id="house4" src="/images/LEGO-City/imageedit_40_4503824563.gif" alt="">
+            <img id="balconyWoman" src="/images/LEGO-City/imageedit_34_9925936600.gif" alt="">
         </section>
     </section> 
 
