--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -23,6 +23,18 @@
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
             <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
+            <img class="snow" src="/images/Lego-Land/white-lego-board2.jpg" alt="snow"/>
         </div>
 
         <!-- Sky -->
@@ -32,6 +44,8 @@
 
         <!-- Top windows -->
         <div class="windowContainer">
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
+            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
@@ -91,10 +105,12 @@
         
         <!-- Trees -->
         <div class="treeContainer">
+
+            <img class="tree" id="tree5" src="/images/startside/tree2.png" alt="tree1"/>
             <img class="tree" id="tree1" src="/images/startside/tree1.png" alt="tree1"/>
             <img class="tree" id="tree2" src="/images/startside/tree1.png" alt="tree1"/>
-            <img class="tree" id="tree3" src="/images/startside/tree1.png" alt="tree1"/>
             <img class="tree" id="tree4" src="/images/startside/tree2.png" alt="tree1"/>
+            <img class="tree" id="tree3" src="/images/startside/tree1.png" alt="tree1"/>
         </div>
 
         <!-- Clouds -->
@@ -104,7 +120,15 @@
             <img class="cloud" id="cloud3" src="/images/Lego-Land/cloud2.png" alt="cloud"/>
             <img class="cloud" id="cloud4" src="/images/Lego-Land/cloud2.png" alt="cloud"/>
         </div>
-        
+
+        <!-- Presents -->
+        <div class="presentShowBtn"></div>
+
+        <div class="presentContainer">
+            <img class="present" id="present1" src="/images/North-Pole/present1.png" alt="present1"/>
+            <img class="present" id="present2" src="/images/North-Pole/present2.png" alt="present1"/>
+            <img class="present" id="present3" src="/images/North-Pole/present3.png" alt="present1"/>
+        </div>
     </div>   
 </body>
 </html>
